--- a/src/components/Integration/MappingsResult/mappingsResult.module.css
+++ b/src/components/Integration/MappingsResult/mappingsResult.module.css
@@ -228,6 +228,8 @@
   outline: none;
   border-radius: 10px;
   border: 1px solid var(--border-color);
+  background-color: var(--background-color-card);
+  color: var(--text-color-primary);
   font-size: 16px;
 
   overflow: hidden;
